--- a/.github/workflows/ci-with-unit-test.yml
+++ b/.github/workflows/ci-with-unit-test.yml
@@ -6,9 +6,8 @@ on:
       - develop
 
 jobs:
-  build :
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -16,5 +15,17 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build and Unit Tests
-        run: ./gradlew build --no-daemon
+      - name: Build
+        run: ./gradlew build -x test --no-daemon
+
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Unit Test
+        run: ./gradlew test --no-daemon
