--- a/.github/workflows/ci-with-unit-test.yml
+++ b/.github/workflows/ci-with-unit-test.yml
@@ -1,12 +1,15 @@
-name: CI for PR from Feature to Develop
+name: CI for PR and Push on Develop
 
 on:
   pull_request:
     branches:
       - develop
+  push:
+    branches:
+      - develop
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,17 +18,5 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build
-        run: ./gradlew build -x test --no-daemon
-
-  unit-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Unit Test
-        run: ./gradlew test --no-daemon
+      - name: Build and Unit Test
+        run: ./gradlew build --no-daemon
